--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:VisualizadorDeSinais"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance local:MainWindow, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -44,12 +45,12 @@
         </Grid>
         
         <Border Grid.Row="1" Margin="5">
-            <lvc:CartesianChart Series="{Binding SeriesCollection}">
+            <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Top">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Tempo" Foreground="Black"/>
+                    <lvc:Axis Title="Tempo" Foreground="Black" LabelFormatter="{Binding YFormatter}"/>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Amplitude" Foreground="Black"/>
+                    <lvc:Axis Title="Amplitude" Foreground="Black" Labels="{Binding Labels}"/>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
         </Border>
