--- a/src/VisualizadorDeSinais/Views/MainView.axaml
+++ b/src/VisualizadorDeSinais/Views/MainView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:VisualizadorDeSinais.ViewModels"
-             xmlns:codif="using:VisualizadorDeSinais.Codificacoes"
+             xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="VisualizadorDeSinais.Views.MainView"
              x:DataType="vm:MainViewModel">
@@ -13,11 +13,40 @@
     <vm:MainViewModel />
   </Design.DataContext>
 
-  <ComboBox ItemsSource="{Binding Codifications}">
-    <ComboBox.ItemTemplate>
-      <DataTemplate x:DataType="{Binding codif:ILineCodification}">
-        <TextBlock Text="{Binding UserFriendlyName}"/>
-      </DataTemplate>
-    </ComboBox.ItemTemplate>
-  </ComboBox>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="Auto"/>
+    </Grid.ColumnDefinitions>
+    
+    <!-- HEADER -->
+    <ComboBox ItemsSource="{Binding Codifications}"
+              Margin="5"
+              SelectionChanged="ComboBox_SelectionChanged"
+              SelectedItem="{Binding SelectedCodification, Mode=TwoWay}">
+      <ComboBox.ItemTemplate>
+        <DataTemplate>
+          <TextBlock Text="{Binding UserFriendlyName}"/>
+        </DataTemplate>
+      </ComboBox.ItemTemplate>
+    </ComboBox>
+    <TextBox Grid.Column="1" Margin="5" Watermark="Digite a sequência binária aqui"
+             TextChanged="TextBox_TextChanged"
+             Text="{Binding BinaryText, Mode=TwoWay}"/>
+    
+    <!-- CONTENT -->
+    <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="3"
+                        Margin="5"
+                        Series="{Binding ChartSeries}"
+                        XAxes="{Binding AxisX}"
+                        YAxes="{Binding AxisY}">
+    </lvc:CartesianChart>
+  </Grid>
+  
+  
 </UserControl>
