--- a/src/VisualizadorDeSinais/Views/MainView.axaml
+++ b/src/VisualizadorDeSinais/Views/MainView.axaml
@@ -38,7 +38,7 @@
     <TextBox Grid.Column="1" Margin="5" Watermark="Digite a sequência binária aqui"
              TextChanged="TextBox_TextChanged"
              Text="{Binding BinaryText, Mode=TwoWay}"/>
-    <Button Grid.Column="2" Margin="5"
+    <Button Grid.Column="2" Margin="5" Padding="3"
             VerticalAlignment="Center" HorizontalAlignment="Center"
             Width="30" Height="30">
       <Button.Content>
@@ -48,9 +48,20 @@
       </Button.Content>
       <Button.Flyout>
         <Flyout>
-          <TextBlock Text="{Binding SelectedCodification.Description}"
-                     TextWrapping="WrapWithOverflow"
-                     Width="200"/>
+          <StackPanel HorizontalAlignment="Stretch" Margin="2" Spacing="2"
+                      Width="200">
+            <TextBlock TextWrapping="WrapWithOverflow">
+              <Span FontWeight="Bold">
+                <Run Text="{Binding SelectedCodification.CompleteName}"></Run>
+                <Run Text=" ("/>
+                <Run Text="{Binding SelectedCodification.UserFriendlyName}"/>
+                <Run Text=")"/>
+              </Span>
+            </TextBlock>
+            <TextBlock Text="{Binding SelectedCodification.Description}"
+                       TextWrapping="WrapWithOverflow"
+                     />
+          </StackPanel>
         </Flyout>
       </Button.Flyout>
     </Button>
